--- a/Modules/BWO/Resources/assets/sass/_buttons.scss
+++ b/Modules/BWO/Resources/assets/sass/_buttons.scss
@@ -32,7 +32,7 @@
     }
   }
   &.btn-soft-gray{
-    color:$brand-black-color;
+    color:$brand-dark-gray-color;
     background-color:$brand-light-gray-color;
     &:hover {
       background-color:$brand-dark-gray-color;
