--- a/Modules/BWO/Resources/assets/sass/_offer.scss
+++ b/Modules/BWO/Resources/assets/sass/_offer.scss
@@ -2,10 +2,10 @@ body{
   .offers-container{
     .offer-container{
       background-color: white;
-      padding:10px;
+      padding:10px 20px;
       margin-top: -80px;
       h1{
-        @include font(32,40,600);
+        @include font(34,36,600);
         text-align: center;
         color:$brand-dark-gray-color;
       }
@@ -22,17 +22,18 @@ body{
       }
       .information{
         padding:25px 0px 0px;
-        background-color:$brand-light-gray-color;
+        background-color:$brand-lightest-gray-color;
         .gray-square-text{
-          width:105px;
+          width:90px;
           @include font(20,20,600);
-          margin:0 15px 20px;
+          margin:0 15px 15px;
+          padding: 3px 7px;
         }
         .block-info{
-          margin:0 15px 10px;
+          margin:0 15px 8px;
 
           p{
-            @include font(14,18,200);
+            @include font(15,18,400);
             margin:0;
           }
         }
@@ -40,13 +41,13 @@ body{
           background-color:$brand-dark-gray-color;
           color:white;
           margin-top:20px;
-          padding:10px;
+          padding:6px;
           text-align: center;
           @include font(12,18,600);
         }
         .share-container{
           background-color: white;
-          padding: 25px 5px;
+          padding: 20px 5px;
           text-align: center;
         }
       }
@@ -54,13 +55,24 @@ body{
         padding: 5px 30px;
         color:$brand-dark-gray-color;
         .title{
-          @include font(14,18,600);
+          @include font(16,20,600);
           margin: 20px 0 10px;
+        }
+        p{
+          @include font(14,20,100);
         }
       }
       .btn-red-container{
         text-align: center;
         margin:20px 0;
+        .btn-red{
+          padding: 15px 28px;
+          @include font(14,20,400);
+          i{
+            @include font(16,20,400);
+            margin-right:5px;
+          }
+        }
       }
 
     }
