--- a/Modules/BWO/Resources/assets/sass/_post.scss
+++ b/Modules/BWO/Resources/assets/sass/_post.scss
@@ -14,18 +14,20 @@ body{
       background-color: white;
       padding:10px;
       margin-top: -130px;
-      -webkit-box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
-      -moz-box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
-      box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
+      -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+      -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+      box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
       margin-bottom:20px;
       h1{
-        @include font(32,40,600);
+        @include font(34,40,600);
         text-align: center;
         color:$brand-dark-gray-color;
+        margin-bottom: 30px;
       }
       .description{
-        padding: 5px 30px;
+        padding: 5px 45px;
         color:$brand-dark-gray-color;
+        @include font(12,18,400);
         img{
           max-width: 100%;
         }
@@ -35,22 +37,27 @@ body{
             float:right;
           }
           .first-info{
-          @include font(12,14,100);
-          text-align: left;
-          color:$brand-dark-gray-color;
-          margin-bottom:35px;
-          float:left;
-        }
+            @include font(12,18,100);
+            text-align: left;
+            color:$brand-dark-gray-color;
+            margin-bottom:35px;
+            float:left;
+            .btn-soft-gray{
+              margin-right: 10px;
+              padding: 8px 20px;
+            }
+          }
         }
         .subtitle{
-          @include font(25,30,400);
-          margin: 20px 0 10px;
+          @include font(24,26,400);
+          margin: 20px 0 5px;
           color:$brand-light-gray-color;
         }
       }
     }
   }
 .other-posts{
+  margin-top: 40px;
   h3{
     padding: 0 34px;
     @include font(16,18,600);
@@ -61,9 +68,9 @@ body{
       max-width: 100%;
     }
     padding: 20px;
-    -webkit-box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 41px -8px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
     margin-bottom:20px;
 
     .title{
@@ -73,21 +80,26 @@ body{
     }
     .date{
       color:$brand-light-gray-color;
-      @include font(12,14,300);
-      margin-bottom:10px;
+      @include font(12,14,400);
+      margin-bottom:5px;
       height: 14px;
     }
-    .read-more{
-      text-decoration:none;
-      color:$brand-red-color;
+    p{
+      color:$brand-dark-gray-color;
+      @include font(12,18,400);
+      .read-more{
+        text-decoration:none;
+        color:$brand-red-color;
+      }
     }
+
   }
   .left-post-container, .right-post-container{
     padding:10px 15px;
   }
   @include mq(md){
     h3{
-      padding: 0 25px;
+      padding: 0 35px;
     }
     .left-post-container{
       padding-left: 5px;
