--- a/Modules/BWO/Resources/assets/sass/_variables.scss
+++ b/Modules/BWO/Resources/assets/sass/_variables.scss
@@ -10,9 +10,10 @@ $brand-black-color : #000; //dark
 $brand-white-color : #fff; //light gray
 $brand-dark-gray-color : #666666; //dark gray
 $brand-light-gray-color : #d3d1ae; //light gray
+$brand-footer-light-gray-color : #d2d1ad;
 $brand-lightest-gray-color : #e0dfc7; //lightesr gray
 
 $brand-red-color: #ff0000;
 
 
-$brand-font-1 : Arial, sans-serif;
+$brand-font-1 : Roboto;
