--- a/Modules/BWO/Resources/assets/sass/_layout.scss
+++ b/Modules/BWO/Resources/assets/sass/_layout.scss
@@ -286,6 +286,96 @@ body {
     }
   }
 
+  .three-colors-separator{
+    width: 291px;
+    margin:0 auto;
+    .separator-piece{
+      height: 6px;
+      display:inline-block;
+      margin-right:-3px;
+      &.dark-gray{
+        background-color:$brand-dark-gray-color;
+        width: 153px;
+      }
+      &.soft-gray{
+        background-color: $brand-light-gray-color;
+        width: 109px;
+      }
+      &.red{
+        background-color: $brand-red-color;
+        width: 30px;
+      }
+    }
+
+  }
+
+  .three-offers-container{
+    padding:50px 15px 30px;
+    .offer-box{
+      padding: 18px 0 0;
+      text-align:center;
+      -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+      -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+      box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+      margin-bottom:20px;
+      .title{
+        padding:0 42px;
+        color:$brand-dark-gray-color;
+        @include font(20,22,600);
+        height:42px;
+        margin-bottom:10px;
+      }
+      p{
+        color:$brand-light-gray-color;
+        @include font(12,14,300);
+        margin-bottom:15px;
+        height: 14px;
+      }
+      .buttons{
+        margin-bottom:20px;
+        a{
+          &.btn{
+            padding: 6px 28px;
+          }
+        }
+      }
+      .detail{
+        width:100%;
+        padding: 15px;
+        color:$brand-white-color;
+        @include font(18,20,600);
+        background-color: $brand-dark-gray-color;
+        cursor:pointer;
+        text-decoration: none;
+        &:hover{
+          background-color: $brand-red-color;
+          cursor:pointer;
+          text-decoration: none;
+        }
+      }
+    }
+
+
+    .offer-box-right, .offer-box-center, .offer-box-left{
+      max-width: 350px;
+      margin:0 auto;
+    }
+    @include mq(md){
+      .offer-box-right{
+        padding: 5px 0 5px 33px;
+      }
+      .offer-box-center{
+        padding: 5px 17px 5px 17px;
+      }
+      .offer-box-left{
+        padding: 5px 33px 5px 0;
+      }
+      .offer-box{
+        height:195px;
+      }
+    }
+  }
+
 }
 
 footer{
