--- a/Modules/BWO/Resources/assets/sass/_variables.scss
+++ b/Modules/BWO/Resources/assets/sass/_variables.scss
@@ -12,6 +12,7 @@ $brand-dark-gray-color : #666666; //dark gray
 $brand-light-gray-color : #d3d1ae; //light gray
 $brand-footer-light-gray-color : #d2d1ad;
 $brand-lightest-gray-color : #e0dfc7; //lightesr gray
+$brand-light-gray-input : #e9e8d7; //modal inputs
 
 $brand-red-color: #ff0000;
 
